// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBox/> renders correctly 1`] = `
<div>
  <h3>
    <inject-_class-with-languageStore
      name="errors__header"
    />
  </h3>
  <p>
    <inject-_class-with-languageStore
      name="errors__default"
    />
  </p>
</div>
`;

exports[`<ErrorBox/> renders correctly with optional props 1`] = `
<div>
  <h3>
    <inject-_class-with-languageStore
      name="errors__header"
    />
  </h3>
  <p>
    testMessage
  </p>
</div>
`;
